# pyspace

./: .coveragerc  AUTHORS.rst  Client Code  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
demo/: rawData.csv
docs/: conf.py  index.rst
src/imu/: client.py  server.py
tests/: conftest.py
