
[metadata]
name = imu
description = Filter comparisons, Angle estimations and recording of RAW outputs- using Kalman filters, python and Socket programming. 
author = Vishnu Pradeep
author-email = mevishnupradeep@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/pradeep-vishnu/IMU--True-Measurement-of-Roll-ptich-and-yaw
platforms = any

classifiers =
    Development Status :: 1.0.0
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

setup_requires = pyscaffold>=3.3a0,<4
install_requires = numpy; scipy ; socket ; time ; sys ; matplotlib ; os ;
 @ FaBo9AXIS-MPU9250-Python https://github.com/FaBoPlatform/FaBo9AXIS-MPU9250-Python
[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install imu[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov


[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.3.1
package = imu
extensions =
    no_skeleton
